k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradio-service
spec:
  selector:
    app: gradio
  ports:
    - protocol: TCP
      port: 80 # Внешний порт сервиса
      targetPort: 8080 # Порт контейнера
      nodePort: 30080
  type: NodePort
